# bitgn

./: .env.example  .gitignore  Makefile  README.md  ablate.py  agent.py  codex_agent.py  codex_config.example.toml  codex_loop.py  compact_prompt.md  config.py  explore_task.py  main.py  pyproject.toml  run.sh  vault_mcp_server.py  vault_utils.py
prompts/: __init__.py  codex_preamble.md  instructions.md  multi_step.md
tests/: run_synthetic.py  synthetic_tasks.py
